# LibreRent

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
src/: database.rs  init.rs  inventory_element.rs  login.rs  main.rs  user.rs
