[package]
name = "mysoft"
version = "0.1.0"
authors = ["crum6le"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.2", features = ["router", "fullstack", "html"] }
dioxus-html = { version = "0.7.2", features = ["serialize"] }
rand = "0.9.2"
rusqlite = { version = "0.32.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
sha3 = "0.10.8"

getrandom = { version = "0.3.4", features = ["wasm_js"] }
axum = {version = "0.8.8", optional = true, features = ["macros"]}
axum_session = {version="0.17.1", optional = true}
axum_session_auth = {version="0.17.0", optional = true}
axum_session_sqlx = {version="0.6.1", optional = true, features = ["sqlite"]}
sqlx = "0.8.6"
async-trait = "0.1.89"

[features]
default = ["server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server", 
    "dep:rusqlite",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:axum_session_sqlx"
    
]


[target.wasm32-unknown-unknown]
rustflags = ["-Z", "share-generics=y",  "--cfg", "reqwest_unstable", '--cfg', 'getrandom_backend="wasm_js"']
